--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <title>Abakkus Investing</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-    <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/static/styles/materialize.css" media="screen,projection" />
-    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <style>
     body {
-        background-color: #303F9F;
+        background-color: white;
         /* overflow: hidden; */
         margin: 0px;
     }
@@ -24,37 +21,48 @@
     }
 
     .nameCompany {
-        color: #FFC107;
+        color: #1D2668;
         font-weight: 900;
         padding-top: 1cm;
         font-size: 2cm;
         text-align: center;
     }
 
-    p.navBarItem {
-        color: white;
-        font-weight: 500;
-        font-size: 0.7cm;
-        padding-top: 1cm;
-        align-self: flex-end;
-    }
-
-    div.outPopUp {
-        position: absolute;
-        width: 60%;
-        z-index: 15;
-        top: 40%;
-        /* left: 30%; */
-        margin-left: 20%;
-        text-align: center;
+    div.division {
+        width: 33.33%;
+        /* change this to 100/# of divs you want */
+        height: fit-content;
+        padding: 2%;
+        /* background: yellow; */
+        float: left;
     }
 
     div.fullScreenBlock {
-        background-color: #303F9F;
+        /* background-color: #A7AAC2; */
+        background-color: #ECECEF;
         overflow: hidden;
         margin: 0px;
         width: 100%;
-        height: 100%;
+        /* height: 500px; */
+        height: fit-content;
+    }
+
+    a.navBar {
+        color: white
+    }
+
+    .companyColor {
+        color: #FFC107;
+    }
+
+    /* @media only screen and (min-width: 993px) {
+        nav a.button-collapse {
+            display: block;
+        }
+    } */
+
+    img {
+        object-fit: cover;
     }
 </style>
 
@@ -62,54 +70,140 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="/static/js/materialize.min.js"></script>
-    <script src="/static/js/particles.js"></script>
-    <header>
+
+    <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Logo</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <a href="#!" class="brand-logo companyColor">Logo</a>
+                <a href="#" data-activates="mobile-navbar" class="button-collapse">
+                    <i class="material-icons companyColor">menu</i>
+                </a>
+                <ul class="right hide-on-med-and-down">
                     <li>
-                        <a href="/" class="waves-effect waves-orange">Home</a>
+                        <a href="#homeSection" class="waves-effect waves-teal navBar tooltipped" data-position="bottom" data-tooltip="I am a tooltip"
+                            data-target="home">Home</a>
                     </li>
                     <li>
-                        <a href="/contactUs" class="waves-effect waves-orange">Contact Us</a>
+                        <a href="#aboutSection" class="waves-effect waves-teal tooltipped" data-position="bottom" data-tooltip="I am a tooltip" data-target="about">About</a>
                     </li>
                     <li>
-                        <a href="/about" class="waves-effect waves-orange">About</a>
+                        <a href="#contactUsSection" class="waves-effect waves-teal tooltipped" data-position="bottom" data-tooltip="I am a tooltip"
+                            data-target="contactUs">Contact Us</a>
                     </li>
                 </ul>
             </div>
         </nav>
-    </header>
-    <div class="fullScreenBlock">
-        <div id="particles-js" position="absolute"></div>
-        <div class="outPopUp">
-            <span class="nameCompany hiddenElement">Abakkus Investing</span>
+    </div>
+
+    <ul class="side-nav" id="mobile-navbar">
+        <li>
+            <a href="#homeSection" class="waves-effect waves-teal navBar" data-target="home" style="color:black">Home</a>
+        </li>
+        <li>
+            <a href="#aboutSection" class="waves-effect waves-teal navBar" data-target="about" style="color:black">About</a>
+        </li>
+        <li>
+            <a href="#contactUsSection" class="waves-effect waves-teal navBar" data-target="contactUs" style="color:black">Contact Us</a>
+        </li>
+    </ul>
+
+    <div class="fullScreenBlock scrollspy" id="homeSection">
+        <!-- <img src="/static/imgs/sunset.jpg" style:"object-fit:cover"/> -->
+        <p class="nameCompany hiddenElement" style="text-align: center;
+        vertical-align: middle">Abakkus Investing
             <br/>
-            <span class="nameCompany hiddenElement">
-                <font color="white">Insert Tagline Over Here</font>
+            <span class="hiddenElement" style="color:#FFC107; font-size: 1cm; font-weight: 200">
+                Believe in the Basics
             </span>
+        </p>
+
+
+        <!-- </div> -->
+    </div>
+    <div class="fullScreenBlock scrollspy" id="aboutSection">
+        <div name="info-cards" style="padding:3%">
+            <ul class="collapsible">
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">perm_identity</i>Who are we?</div>
+                    <div class="collapsible-body">
+                        <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">star</i>What do we do?</div>
+                    <div class="collapsible-body">
+                        <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">sentiment_very_satisfied</i>More about us.</div>
+                    <div class="collapsible-body">
+                        <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="fullScreenBlock scrollspy" id="contactUsSection">
+        <p>CONTACT</p>
+        <div class="division"></div>
+    </div>
+</body>
+
+<footer class="page-footer" id="footer-top">
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                    <li>
+                        <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                    </li>
+                    <li>
+                        <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                    </li>
+                    <li>
+                        <a class="grey-text text-lighten-3" href="#!">Link 3</a>
+                    </li>
+                    <li>
+                        <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="fullScreenBlock" id="aboutSection" />
-    <div class="fullScreenBlock" id="contactUsSection" />
-</body>
+    <div class="footer-copyright" id="footer-bottom">
+        <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+    </div>
+</footer>
 
 <script>
 
-    $(".nav-wrapper").css("background-color", "#303F9F");
+    $(".nav-wrapper").css("background-color", "#1D2668");
     $(".nav-wrapper").css("padding-left", '0.75cm');
     $(".nav-wrapper").css("padding-right", "0.75cm");
-    $("#aboutSection").css("background-color", "red");
-    $("#contactUsSection").css("background-color", "green");
-
-    particlesJS.load('particles-js', '/static/assets/particles.json', function () {
-        console.log('callback - particles.js config loaded');
-    });
+    $("#aboutSection").css("background-color", "white");
+    $("#footer-top").css("background-color", "#797EA4");
+    $("#footer-bottom").css("background-color", "#4B5286");
 
     $(document).ready(function () {
         $(".hiddenElement").fadeIn(4000);
+        $(".button-collapse").sideNav();
+        $('.scrollspy').scrollSpy();
+        $(".collapsible").collapsible();
     }, 4000);
+
 </script>
 
 </html>
