A lot of changes
- Added separate about, people, blog pages.
- Restyled a lot of the website to make it mobile-friendly.
- Added squirrel images.
- Added 404 error page.
- Added contact and social media information.
- Finished people page.
- Added a newsletter registration form.

--- a/static/styles/materialize.css
+++ b/static/styles/materialize.css
@@ -5556,6 +5556,10 @@ button.btn-floating {
   background-color: rgba(255, 235, 59, 0.7);
 }
 
+.waves-effect.waves-abakkus .waves-ripple {
+  background-color: #FF6600;
+}
+
 .waves-effect.waves-orange .waves-ripple {
   background-color: rgba(255, 152, 0, 0.7);
 }
