Cleaned up codebase and made design tweaks

--- a/templates/404.html
+++ b/templates/404.html
@@ -17,11 +17,11 @@
 
     <div class="ErrorPageBackground">
         <div class="row" style="padding-top: 10%; padding-left: 4%">
-            <div class="col s12 m12 l6 offset-l6">
+            <div class="col s12 m12 l6 offset-l6 m4">
                 <h3 style="color: white; font-weight: 800">404 Error: Abakkus Squirrel could not find the page you were looking for. </h3>
                 <h5 style="color: white">Maybe you wanted to go:
                     <a href="/" style="font-weight: 800">Home, </a>
-                    <a href="/about" style="font-weight: 800">About. </a>
+                    <a href="/about" style="font-weight: 800">About, </a>
                     <a href="/people" style="font-weight: 800">People, </a>
                     <a href="/blog" style="font-weight: 800">Blog. </a>
                 </h5>
