--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,22 +2,23 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
+                <h5 class="white-text">Office Addresses</h5>
                 <div class="row">
                     <div class="col s12 l6">
-                        <p class="grey-text text-lighten-4">Mumbai Address
-                            <br/>1st Floor, 106B, The Capital,
-                            <br/> Bandra Kurla Complex, Bandra (E),
-                            <br/> Mumbai, Maharashtra 400098
-                            <br/>
-                            <a href="https://goo.gl/maps/LELvTxhBZSC2" target="_blank" style="color: whitesmoke; font-weight: 600">Navigation - Google Maps</a>
-                        </p>
+                        <a href="https://goo.gl/maps/LELvTxhBZSC2" target="_blank" style="color: whitesmoke; font-weight: 600">
+                            <p class="grey-text text-lighten-4">Mumbai
+                                <br/>1st Floor, 106B, The Capital,
+                                <br/> Bandra Kurla Complex, Bandra (E),
+                                <br/> Mumbai, Maharashtra 400098
+                                <br/>
 
+                            </p>
+                        </a>
                     </div>
                 </div>
 
             </div>
-            <div class="col l4 offset-l2 s12">
+            <div class="col l4 offset-l2 s12" id="footer">
                 <h5 class="white-text">Contact Us</h5>
                 <ul>
                     <li>
@@ -43,8 +44,14 @@
     </div>
     <div class="footer-copyright" id="footer-bottom">
         <div class="container">
-            Copyright © 2018 Abakkus | All Rights Reserved
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <div class="row">
+                <div class="col s12 m8 l8">
+                    Copyright © 2018 Abakkus | All Rights Reserved
+                </div>
+                <div class="col s12 m4 l4">
+                    <a class="grey-text text-lighten-4" href="#!">Terms and Conditions | Privacy Policy</a>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
