--- a/templates/navigationBar.html
+++ b/templates/navigationBar.html
@@ -15,24 +15,21 @@
             </a>
             <ul class="right hide-on-med-and-down">
                 <li>
-                    <a href="/" class="waves-effect waves-abakkus navBar tooltipped" data-position="bottom" data-tooltip="I am a tooltip">Home</a>
+                    <a href="/" class="waves-effect waves-abakkus navBar">Home</a>
                 </li>
                 <li>
-                    <a href="#!" class="dropdown-trigger navBar" data-activates="dropdownAbout">About
+                    <a href="/about" class="dropdown-trigger waves-effect waves-abakkus navBar" data-activates="dropdownAbout">About
                         <i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
                 <li>
-                    <a href="/people" class="waves-effect waves-abakkus navBar tooltipped" data-position="bottom" data-tooltip="I am a tooltip"
-                        data-target="about">People</a>
+                    <a href="/people" class="waves-effect waves-abakkus navBar">People</a>
                 </li>
                 <li>
-                    <a href="/insights" class="waves-effect waves-abakkus navBar tooltipped" data-position="bottom" data-tooltip="I am a tooltip"
-                        data-target="about">Insights/Blog</a>
+                    <a href="/insights" class="waves-effect waves-abakkus navBar">Insights/Blog</a>
                 </li>
                 <li>
-                    <a href="/contactUs" class="waves-effect waves-abakkus navBar tooltipped" data-position="bottom" data-tooltip="I am a tooltip"
-                        data-target="contactUs">Contact Us</a>
+                    <a href="#footer" class="waves-effect waves-abakkus navBar">Contact Us</a>
                 </li>
             </ul>
         </div>
