--- a/templates/sideNavigationBar.html
+++ b/templates/sideNavigationBar.html
@@ -1,12 +1,19 @@
 <ul class="side-nav" id="mobile-navbar">
+    <!-- <img src="/static/imgs/Abakkus Logo.jpg"  style="object-fit:cover; width:inherit" /> -->
     <li>
-        <a href="#homeSection" class="waves-effect waves-yellow navBar" data-target="home" style="color:black">Home</a>
+        <a href="/" class="waves-effect waves-abakkus navBar">Home</a>
     </li>
     <li>
-        <a href="#aboutSection" class="waves-effect waves-yellow navBar" data-target="about" style="color:black">About</a>
+        <a href="/about" class="waves-effect waves-abakkus navBar">About</a>
     </li>
     <li>
-        <a href="#contactUsSection" class="waves-effect waves-yellow navBar" data-target="contactUs" style="color:black">Contact Us</a>
+        <a href="/people" class="waves-effect waves-abakkus navBar">People</a>
+    </li>
+    <li>
+        <a href="/insights" class="waves-effect waves-abakkus navBar">Insights/Blog</a>
+    </li>
+    <li>
+        <a href="/contactUs" class="waves-effect waves-abakkus navBar">Contact Us</a>
     </li>
 </ul>
 <script>
