--- a/templates/navigationBar.html
+++ b/templates/navigationBar.html
@@ -15,7 +15,7 @@
             </a>
             <ul class="right hide-on-med-and-down">
                 <li>
-                    <a href="/" class="waves-effect waves-abakkus navBar">Home</a>
+                    <a href="index.html" class="waves-effect waves-abakkus navBar">Home</a>
                 </li>
                 <li>
                     <a href="/about" class="dropdown-trigger waves-effect waves-abakkus navBar" data-activates="dropdownAbout">About
