--- a/templates/sideNavigationBar.html
+++ b/templates/sideNavigationBar.html
@@ -1,7 +1,7 @@
 <ul class="side-nav" id="mobile-navbar">
     <!-- <img src="/static/imgs/Abakkus Logo.jpg"  style="object-fit:cover; width:inherit" /> -->
     <li>
-        <a href="/" class="waves-effect waves-abakkus navBar">Home</a>
+        <a href="index.html" class="waves-effect waves-abakkus navBar">Home</a>
     </li>
     <li>
         <a href="/about" class="waves-effect waves-abakkus navBar">About</a>
