--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col s12 l6">
                         <a href="https://goo.gl/maps/LELvTxhBZSC2" target="_blank" style="color: whitesmoke; font-weight: 600">
-                            <p class="grey-text text-lighten-4">Mumbai
+                            <p class="grey-text text-lighten-4">MUMBAI OFFICE
                                 <br/>1st Floor, 106B, The Capital,
                                 <br/> Bandra Kurla Complex, Bandra (E),
                                 <br/> Mumbai, Maharashtra 400098
@@ -28,6 +28,7 @@
                         <p class="grey-text text-lighten-3" href="#!">Email: info@abakkusinvest.com</p>
                     </li>
                     <li>
+                        Follow Us On: 
                         <a>
                             <img src="/static/imgs/social/facebook-white.png" style="height:28px;">
                         </a>
