--- a/src/css/Abakkus.css
+++ b/src/css/Abakkus.css
@@ -1,7 +1,11 @@
-FullPageBackground {
+.FullPageBackground {
     max-width: 100%;
     height: auto;
     background-position: center;
     background-repeat: no-repeat;
     clip: rect(1000px, 0, 1000px, 20px);
+}
+
+.fillobject {
+    object-fit: cover;
 }
